# credit-scoring-platform

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  docker-compose.yml  docker-config.json
antifraud-service/: CONTRIBUTING.md  Dockerfile  README.md  config.yaml  pyproject.toml
antifraud-service/src/app/: config.py  redis_interact.py  service.py
antifraud-service/src/app/api/: __init__.py  antifraud.py  logic.py  schemas.py
antifraud-service/src/tests/: test_api.py
data-service/: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  config.yaml  pyproject.toml  start.sh
data-service/helm/: values.yaml
data-service/helm/templates/: NOTES.txt  configmap.yaml  deployment.yaml  service.yaml
data-service/k8s/: configmap.yaml  deployment.yaml  gitlab-registry-auth.yaml  secret.yaml  service.yaml
data-service/src/app/: config.py  consumer.py  healthz.py  repeater_list.json  service.py
data-service/src/app/api/: __init__.py  data_interaction.py  schemas.py
data-service/src/app/db/: database.py  models.py
data-service/src/app/db/alembic/: env.py
data-service/src/app/db/alembic/versions/: b275791a15aa_added_profile_snapshot.py  d351074451ff_init_database.py
data-service/src/app/monitoring/: tracing.py
data-service/src/tests/: test_api.py
flow-selection-service/: .env  CONTRIBUTING.md  Dockerfile  README.md  config.yaml  pyproject.toml
flow-selection-service/helm/: Chart.yaml  values.yaml
flow-selection-service/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  gitlab-registry-auth.yaml  secret.yaml  service.yaml
flow-selection-service/k8s/: configmap.yaml  deployment.yaml  gitlab-registry-auth.yaml  service.yaml
flow-selection-service/src/app/: config.py  healthz.py  redis_interact.py  service.py
flow-selection-service/src/app/api/: __init__.py  products.py  schemas.py
flow-selection-service/src/tests/: test_api.py
scoring-service/: CONTRIBUTING.md  Dockerfile  README.md  config.yaml  pyproject.toml
scoring-service/helm/: Chart.yaml  values.yaml
scoring-service/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  gitlab-registry-auth.yaml  service.yaml
scoring-service/k8s/: configmap.yaml  deployment.yaml  gitlab-registry-auth.yaml  service.yaml
scoring-service/src/app/: config.py  healthz.py  producer.py  service.py
scoring-service/src/app/api/: __init__.py  logic.py  schemas.py  scoring.py
scoring-service/src/app/monitoring/: metrics.py  middleware.py
scoring-service/src/tests/: test_api.py
